--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         <li>Borish-kelish samolyot bileti - $500</li>
         <li>Mehmonxona to'lovi (to'liq safar davomiyligi uchun)  - $250</li>
         <li>Muzey va ko'ngilochar joylar uchun - 120 yevro</li>
+        <li>Mani cho'ntegimga - $150</li>
     </ul>
-    <p>Umumiy xarajat: 10 748 100 so'm</p>
+    <p>Umumiy xarajat: 12,585,600 so'm</p>
     <h1 class="title"></h1>
     <script src="./js/main.js"></script>
 </body>
