--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li>Muzey va ko'ngilochar joylar uchun - 120 yevro</li>
         <li>Mani cho'ntegimga - $150</li>
     </ul>
-    <p>Umumiy xarajat: 12,585,600 so'm</p>
+    <p>Umumiy xarajat: 12 585 600 so'm</p>
     <h1 class="title"></h1>
     <script src="./js/main.js"></script>
 </body>
